--- a/Software/Cert/Cert.Data/Cert.Data.csproj
+++ b/Software/Cert/Cert.Data/Cert.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDC784CC-CF00-446F-9721-0C99234A6E51}</ProjectGuid>
+    <ProjectGuid>{8DB2D7E8-8BF2-4314-B511-66B32F267E9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cert.DataAccess</RootNamespace>
-    <AssemblyName>Cert.DataAccess</AssemblyName>
+    <RootNamespace>Cert.Data</RootNamespace>
+    <AssemblyName>Cert.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,10 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MailMergeData\IMailMergeData.cs" />
+    <Compile Include="MailMergeData\MailMergeData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExcelConverter\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
